<resources>
    <string name="app_name">Трезвое радио</string>
    <string name="title">Трезвое радио</string>
    <string name="title_about">О радио</string>

    <string name="description_1">Трезвое радио - это радио Общественного движения утверждения и сохранения Трезвости «Трезвая Россия». Основано в декабре 2015.</string>
    <string name="description_2">Целью радиовещания является утверждение и сохранение Трезвости, согласно народной программе «Трезвость - воля народа!».</string>
    <string name="description_3">Основные задачи: распространение информации о Трезвости и методах её утверждения в обществе, новости о мероприятиях, координация действий по утверждению и сохранению Трезвости в России и за её пределами.</string>

    <string name="site">www.trezvoeradio.ru</string>
</resources>
